# rules_franca

./: .bazelrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  deps.bzl
.github/workflows/: main.yaml
example/: BUILD.bazel  HelloWorld.fidl  client.cpp
example/api/: BUILD.bazel
example/api/interface/: HelloWorld.fdepl  HelloWorld.fidl
example/api/types/: CommonTypes.fdepl  CommonTypes.fidl
example/client/: BUILD.bazel  client.cpp  client.sh
example/common/: BUILD.bazel  run.sh
example/config/: BUILD.bazel  commonapi.ini
example/server/: BUILD.bazel  server.cpp
rules/: defs.bzl  franca_library.bzl  franca_transform.bzl  providers.bzl
tools/: BUILD.bazel  capicxx_core_tools.BUILD  capicxx_core_tools.sh  tool_path_wrapper.bzl
tools/someip/: BUILD.bazel  capicxx_someip_tools.sh
