load("//rules:defs.bzl", "franca_library", "franca_transform")

franca_library(
  name = "hello_world",
  srcs = [
    "interface/HelloWorld.fidl",
    "types/CommonTypes.fidl",
  ]
)

franca_library(
  name = "hello_world_someip_depl",
  srcs = [
    "interface/HelloWorld.fdepl",
    "types/CommonTypes.fdepl",
  ],
  deps = [
    ":hello_world",
  ]
)

franca_transform(
  name = "capicxx_hello_world",
  srcs = [
    ":hello_world"
  ],
  args = [
    "-sk"
  ],
  gen = "//tools:capicxx_core_tools",
  outputs = [
    "org/example/CommonTypes.hpp",
    "v1/org/example/HelloWorld.hpp",
    "v1/org/example/HelloWorldProxy.hpp",
    "v1/org/example/HelloWorldProxyBase.hpp",
    "v1/org/example/HelloWorldStub.hpp",
    "v1/org/example/HelloWorldStubDefault.hpp",
  ]
)

cc_library(
  name = "capicxx_hello_world_api",
  hdrs = [":capicxx_hello_world"],
  deps = ["@com_github_covesa_capicxx_core_runtime//:capicxx_core_runtime"],
  includes = ["."],
)

cc_binary(
  name = "client",
  srcs = ["client.cpp"],
  deps = [":capicxx_hello_world_api"],
)

franca_transform(
  name = "capicxx_hello_world_someip_binding",
  srcs = [
    ":hello_world_someip_depl"
  ],
  gen = "//tools/someip:capicxx_someip_tools",
  outputs = [
    "org/example/CommonTypesSomeIPDeployment.hpp",
    "org/example/CommonTypesSomeIPDeployment.cpp",
    "v1/org/example/HelloWorldSomeIPDeployment.hpp",
    "v1/org/example/HelloWorldSomeIPDeployment.cpp",
    "v1/org/example/HelloWorldSomeIPProxy.hpp",
    "v1/org/example/HelloWorldSomeIPProxy.cpp",
    "v1/org/example/HelloWorldSomeIPStubAdapter.hpp",
    "v1/org/example/HelloWorldSomeIPStubAdapter.cpp",
  ]
)