load(":tool_path_wrapper.bzl", "tool_path_wrapper")

tool_path_wrapper(
  name = "capicxx_core_tools",
  binary = ":capicxx_core_tools_impl",
  tools = [
    "@com_github_covesa_capicxx_core_tools//:generator_bin"
  ],
  visibility = ["//visibility:public"]
)

sh_binary(
  name = "capicxx_core_tools_impl",
  srcs = ["capicxx_core_tools.sh"],
  data = [
    "@com_github_covesa_capicxx_core_tools//:generator_bin"
  ],
)