cc_binary(
  name = "server_exe",
  srcs = [
    "server.cpp",
    "@com_github_covesa_capicxx_core_runtime//:shared_lib"
  ],
  deps = ["//example/api:capicxx_hello_world_api"],
)

sh_binary(
  name = "server",
  srcs = ["//example/common:run.sh"],
  data = [
    ":server_exe",
    "//example/config:commonapi.ini",
    "//example/api:binding_shared_lib",
    "@com_github_covesa_vsomeip//:vsomeip_cfg_shared_lib_patched",
    "@com_github_covesa_vsomeip//:vsomeip_sd_shared_lib_patched"
  ],
  args = [
    "$(location :server_exe)",
    "$(location //example/config:commonapi.ini)",
    "$(location //example/api:binding_shared_lib)",
    "$(location @com_github_covesa_vsomeip//:vsomeip_cfg_shared_lib_patched)",
    "$(location @com_github_covesa_vsomeip//:vsomeip_sd_shared_lib_patched)",
    "ServerExample"
  ]
)